# bsalign-rs

./: .gitmodules  Cargo.toml  README.md  justfile
bsalign/: Cargo.toml
bsalign/examples/: pairwise.rs  poa.rs
bsalign/src/: align_mode.rs  align_score.rs  bitseq.rs  lib.rs  pairwise.rs  poa.rs  vector.rs
bsalign_sys/: .gitignore  Cargo.toml  build.rs  wrapper.c  wrapper.h
bsalign_sys/src/: bindings.rs  lib.rs
test-data/: 1.fa  2.fa  msa-2.fa  msa.fa  seq.seq
