[workspace]
resolver = "2"
members = ["bsalign", "bsalign_sys"]

[workspace.package]
version = "0.8.1"
edition = "2024"
description = "Rust bindings for the bsalign C library"
authors = ["dwpeng"]
license = "MIT"
repository = "https://github.com/dwpeng/bsalign-rs"
readme = "README.md"
keywords = ["alignment", "bioinformatics", "sequence", "bsalign", "poa"]
categories = ["science", "api-bindings", "external-ffi-bindings"]
homepage = "https://github.com/dwpeng/bsalign-rs"

[workspace.dependencies]
bsalign_sys = { path = "./bsalign_sys", version = "0.8.1" }

clap = { version = "4.5.47", features = ["derive"] }
noodles = { version = "0.101.0", features = ["fasta"] }
anyhow = { version = "1.0.99" }
