[package]
name = "bsalign"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for the bsalign C library"
authors = ["dwpeng"]
license = "MIT"
repository = "https://github.com/dwpeng/bsalign-rs"
readme = "../README.md"
keywords = ["alignment", "bioinformatics", "sequence", "bsalign"]
categories = ["science", "api-bindings", "external-ffi-bindings"]
homepage = "https://github.com/dwpeng/bsalign-rs"

[dependencies]
bsalign_sys = { workspace = true }
