[package]
name = "bsalign"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
description = { workspace = true }


[dependencies]
bsalign_sys = { workspace = true }
clap = { workspace = true }
noodles = { workspace = true }
anyhow = { workspace = true }
