[package]
name = "bsalign"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
description = { workspace = true }


[dependencies]
bsalign_sys = { workspace = true }

clap = { workspace = true, optional = true }
noodles = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }

[[bin]]
name = "bsalign"
path = "src/bin/bsalign.rs"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "dep:noodles", "dep:anyhow"]
