[package]
name = "bsalign_sys"
version = "0.1.0"
edition = "2024"
description = "Rust bindings for the bsalign C library"
authors = ["dwpeng"]
license = "MIT"
repository = "https://github.com/dwpeng/bsalign-rs"
readme = "../README.md"
keywords = ["alignment", "bioinformatics", "sequence", "bsalign"]
categories = ["science", "api-bindings", "external-ffi-bindings"]
homepage = "https://github.com/dwpeng/bsalign-rs"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.17"
