[package]
name = "bsalign_sys"
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
description = { workspace = true }

[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.20"
